337 ==> 185494 - No images in digiKam, possibly database problem, however they look fine in showfoto.
338 ==> 181792 - Folders appear empty on first run after migrating from an old KDE version.
339 ==> 224404 - No images of a album are shown.
340 ==> 294835 - Albums are listed with (0) photos, but Database Statistics shows correct numbers of photos.
341 ==> 232720 - All Digikam Albums show zero items even though pictures exist.
342 ==> 195079 - digiKam albums appear empty.
343 ==> 203031 - Album list doesn't show pictures even after tons of new pictures were imported.
344 ==> 342557 - No rule to make target /opt/local/lib/libkgeomap.dylib in recent git distribution.
345 ==> 267789 - Make face detection (kface) and geo tagging (kmap) optional features.
346 ==> 171778 - digiKam does not load photos in its database.
347 ==> 196545 - Images on digikam are not dispayed / visualized.
348 ==> 198067 - digiKam does not show any pictures.
349 ==> 253815 - Allow directories/images to be excluded by default.
350 ==> 253062 - Database of 80,000+ images wiped out.
351 ==> 289872 - Database will not open.
352 ==> 313506 - Erasing files should be an independent process in digiKam.
353 ==> 255478 - digiKam database tables only grow in size and get never cleaned.
354 ==> 269435 - digiKam does not display any picture from any source.
355 ==> 201810 - Segfault moving files to trash.
356 ==> 197622 - digiKam crashes on exit.
357 ==> 327470 - digiKam crashes when exiting, after exporting to html.
358 ==> 330111 - No Thumbnails for video files - ffmpegthumbnailer works perfectly outside of digikam.
359 ==> 382703 - Compile error with cmake 3.9.
360 ==> 382677 - Rating groups by mouse only changes first item [patch]
361 ==> 379126 - digiKam on Wayland Plasma crashes at start.
362 ==> 377517 - digiKam editor crash.
363 ==> 152105 - Add collection view concept based on items to print.
364 ==> 383021 - Documentation links in web site broken.
365 ==> 