@@ -377,4 +377,5 @@ BUGFIXES FROM BUGZILLA:
 362 ==> 377517 - digiKam editor crash.
 363 ==> 152105 - Add collection view concept based on items to print.
 364 ==> 383021 - Documentation links in web site broken.
-365 ==> 
+365 ==> 382952 - Don't abort cmake when package is missing
+366 ==> 
